--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -8,31 +8,32 @@
 
     <TextView
         android:id="@+id/text_home"
-        android:layout_width="239dp"
+        android:layout_width="170dp"
         android:layout_height="47dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="108dp"
+        android:layout_marginStart="119dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="122dp"
 
-        android:text="@string/title_evenements_scolaire"
-        android:textAlignment="textStart"
+        android:drawableRight="@drawable/ic_photo"
+        android:gravity="center"
+        android:text="@string/title_photos"
         android:textColor="@color/c3"
-        android:textSize="20sp" />
+        android:textSize="24sp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/photoRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="631dp"
+        android:layout_height="643dp"
         android:layout_below="@+id/divider"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp" />
 
@@ -44,21 +45,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="182dp"
+        android:layout_marginStart="121dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="114dp"
         android:background="@color/c3" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/text_home"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginBottom="-3dp"
-        app:srcCompat="@drawable/remplace" />
 
 </RelativeLayout>
