--- a/app/src/main/res/layout/publication_enseignant.xml
+++ b/app/src/main/res/layout/publication_enseignant.xml
@@ -1,66 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Publication">
-
+    tools:context=".ActivitesActivity" >
 
     <TextView
-        android:id="@+id/text_home_publication"
-        android:layout_width="121dp"
-        android:layout_height="33dp"
+        android:id="@+id/text_ajout_activite"
+        android:layout_width="211dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:drawableRight="@drawable/publier"
+        android:layout_centerVertical="false"
+        android:layout_marginStart="91dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="109dp"
+        android:drawableEnd="@drawable/publier"
+        android:gravity="center"
         android:text="@string/title_publier"
-        android:textAlignment="textStart"
         android:textColor="@color/c3"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:textSize="24sp" />
 
     <View
-        android:id="@+id/divider"
-        android:layout_width="176dp"
+        android:id="@+id/divider_activite"
+        android:layout_width="180dp"
         android:layout_height="1dp"
-        android:layout_below="@+id/text_home"
+        android:foregroundGravity="center"
+        android:layout_below="@+id/text_ajout_activite"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="116dp"
-        android:layout_marginBottom="64dp"
-        android:background="@color/c3"
-        app:layout_constraintBottom_toTopOf="@+id/activite_formulaire_contenair"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.983"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_home_publication"
-        app:layout_constraintVertical_bias="1.0" />
+        android:layout_centerHorizontal="false"
+        android:layout_marginStart="113dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="122dp"
+        android:background="@color/c3" />
 
     <RelativeLayout
         android:id="@+id/activite_formulaire_contenair"
-        android:layout_width="394dp"
-        android:layout_height="440dp"
+        android:layout_width="wrap_content"
+        android:layout_height="469dp"
         android:layout_below="@+id/divider_activite"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="false"
-        android:layout_marginBottom="144dp"
-        android:background="@drawable/roud_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="22dp"
+        android:background="@drawable/roud_background">
 
         <TextView
-            android:id="@+id/ajoutImage_publication"
+            android:id="@+id/ajoutImage_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -71,92 +61,70 @@
             android:textColor="#004D40"
             android:textSize="20sp" />
 
-
         <ImageButton
-            android:id="@+id/addImagePublication"
+            android:id="@+id/addImageButtonPublication"
             android:layout_width="64dp"
             android:layout_height="43dp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="96dp"
+            android:layout_marginStart="29dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="68dp"
-            android:layout_marginBottom="10dp"
-            android:layout_toEndOf="@+id/ajoutImage_publication"
+            android:layout_toEndOf="@+id/ajoutImage_text_view"
             android:background="@drawable/ic_add_image"
             android:contentDescription="@string/description_addImageButton" />
 
         <ImageView
-            android:id="@+id/imageadded"
-            android:layout_width="274dp"
-            android:layout_height="169dp"
+            android:id="@+id/imageaddedPublication"
+            android:layout_width="wrap_content"
+            android:layout_height="190dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="39dp"
+            android:layout_marginStart="35dp"
             android:layout_marginTop="69dp"
-            android:layout_marginEnd="36dp"
+            android:layout_marginEnd="35dp"
             android:background="@drawable/activite"
             android:contentDescription="@string/Description_imageadded" />
 
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="07dp"
-            android:layout_marginTop="300dp"
-            android:layout_marginBottom="103dp"
-            android:text="@string/title_des"
-            android:textSize="15sp" />
-
         <com.google.android.material.textfield.TextInputLayout
-
-
             android:layout_width="wrap_content"
-            android:layout_height="145dp"
-            android:layout_below="@+id/imageadded"
+            android:layout_height="78dp"
+            android:layout_below="@+id/imageaddedPublication"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="99dp"
-            android:layout_marginTop="33dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="7dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/bordure"
+
             android:textColorHint="#004D40"
             app:hintAnimationEnabled="true"
             app:hintEnabled="true"
             app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">
 
-
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edit_text_ajout_libelle"
+                android:id="@+id/edit_text_ajout_description_publication"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
+                android:layout_height="match_parent"
+                android:hint="@string/title_hint_type_ajout_description"
                 android:textColorHint="#004D40" />
         </com.google.android.material.textfield.TextInputLayout>
+
+
 
 
     </RelativeLayout>
 
     <Button
-        android:id="@+id/buttonValider"
-        android:layout_width="109dp"
-        android:layout_height="54dp"
+        android:id="@+id/buttonValiderPublication"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
         android:layout_below="@+id/activite_formulaire_contenair"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="95dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="95dp"
         android:background="@drawable/roud_background"
         android:gravity="center"
         android:text="@string/title_valider_creer_activite"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activite_formulaire_contenair" />
+        android:textSize="24sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-
-
+</RelativeLayout>
