--- a/app/src/main/res/layout/activity_enseignant_dashbord.xml
+++ b/app/src/main/res/layout/activity_enseignant_dashbord.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EnseignantDashbordActivity"
-    >
+    tools:context=".EnseignantDashbordActivity">
 
 
     <TextView
@@ -55,7 +54,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="24dp"
             android:layout_marginTop="71dp"
-            android:background="@drawable/rappel"/>
+            android:background="@drawable/rappel" />
 
         <ImageButton
             android:id="@+id/activite"
@@ -149,16 +148,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
-
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
+        android:theme="@style/AppTheme"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:title="Suivi-Eleve" />
+        app:title="@string/app_name"
+        app:titleTextColor="@color/colorWhite" />
 
     <ImageButton
         android:id="@+id/profile"
